<resources>
    <string name="app_name">Zoromatic Widgets</string>
    <string name="app_prefs">Zoromatic Widgets Preferences</string>
    <string name="about">About Application</string>
    <string name="about_app">About Zoromatic Widgets application</string>
    <string name="main_settings">Main Settings</string>
    <string name="clockweatherwidgetname4x2">Zoromatic Clock and Weather 4x2</string>
    <string name="batterywidgetname">Zoromatic Battery</string>
    <string name="wifiwidgetname">Zoromatic WiFi</string>
    <string name="bluetoothwidgetname">Zoromatic Bluetooth</string>
    <string name="gpswidgetname">Zoromatic Location</string>
    <string name="mobilewidgetname">Zoromatic Mobile Data</string>
    <string name="ringerwidgetname">Zoromatic Sound</string>
    <string name="airplanewidgetname">Zoromatic Airplane</string>
    <string name="brightnesswidgetname">Zoromatic Brightness</string>
    <string name="nfcwidgetname">Zoromatic NFC</string>
    <string name="syncwidgetname">Zoromatic Sync</string>
    <string name="orientationwidgetname">Zoromatic Rotation</string>
    <string name="torchwidgetname">Zoromatic Flashlight</string>
    <string name="powerwidgetname">Zoromatic Power Widget</string>
    <string name="datebatterytxt">--.--.---- [--%]</string>
    <string name="tempempty">--</string>
    <string name="locationempty">--</string>
    <string name="weatherdesc">Weather</string>
    <string name="dateformat">Date Format</string>
    <string name="showdate">Show Date</string>
    <string name="show24hrs">Use 24-hour format</string>
    <string name="showbattery">Show Battery Status</string>
    <string name="batterystatus">--</string>
    <string name="batterydesc">Battery Status</string>
    <string name="wifidesc">WiFi Status</string>
    <string name="bluetoothdesc">Bluetooth Status</string>
    <string name="gpsdesc">Location Status</string>
    <string name="mobiledesc">Mobile Data Status</string>
    <string name="ringerdesc">Sound Status</string>
    <string name="batterynotification">Battery Notification</string>
    <string name="showbatterynotification">Show Battery Notification</string>
    <string name="tempnotification">Temperature Notification</string>
    <string name="showtempnotification">Show Temperature Notification</string>
    <string name="configurewidgets">Configure Widgets</string>
    <string name="clockwidgetprefs">Clock and Weather Widget Preferences</string>
    <string name="basedon12or24">Presentation based on 12 or 24 hours</string>
    <string name="clockcolor">Clock Color</string>
    <string name="weathercolor">Weather Color</string>
    <string name="datecolor">Date Color</string>
    <string name="selectclockcolor">Select clock color</string>
    <string name="selectweathercolor">Select weather color</string>
    <string name="selectdatecolor">Select date color</string>
    <string name="widgettransparency">Widget Opacity</string>
    <string name="widgetbackground">Opacity of widget background</string>
	<string name="additionalinformation">Additional Settings</string>
	<string name="showdatewidget">Show date on the widget</string>
	<string name="hidedatewidget">Hide date on the widget</string>
	<string name="showbatterywidget">Show battery status on the widget</string>
	<string name="clocksettings">Clock Settings</string>
	<string name="clocklayout">CLOCK LAYOUT</string>
	<string name="clocklayoutdesc">Change clock look and feel</string>
	<string name="datelayout">DATE LAYOUT</string>
	<string name="datelayoutdesc">Change date look and feel</string>
	<string name="weatherlayout">WEATHER INFO LAYOUT</string>
	<string name="weatherlayoutdesc">Change weather info look and feel</string>
	<string name="weathersettings">Weather Settings</string>
	<string name="weathersettingsdesc">Set up weather information</string>
	<string name="refreshinterval">Refresh Interval</string>
	<string name="intervalrefreshing">Interval for refreshing weather information</string>
	<string name="refreshnow">Refresh Now</string>
	<string name="locationsettings">Location Settings</string>
	<string name="selectlocation">Select Location</string>
	<string name="tempscale">Temperature Scale</string>
	<string name="selecttempscale">Select temperature scale</string>
	<string name="weathericons">Weather Icons</string>
	<string name="selectweathericons">Select weather icons</string>
	<string name="weatherprovider">Weather Information Provider</string>
	<string name="openweathermaplink">www.openweathermap.org</string>
	<string name="lastrefresh">Last refresh: </string>
	<string name="lastrefreshnever">Last refresh: Never</string>
	<string name="refreshwifionly">Refresh Over WiFi Only</string>
	<string name="refreshwifionlyconnection">Scheduled refresh only when WiFi connection is active</string>
	<string name="refreshanyconnection">Scheduled refresh when any connection is active</string>
	<string name="opacitydescription">0 - fully transparent; 100 - fully opaque</string>
	<string name="selectclockskin">Select clock theme</string>
	<string name="clockskin">Clock Theme</string>
	<string name="selectsoundtoggle">Select sound toggle options</string>
	<string name="soundtoggle">Sound Toggle Options</string>
	<string name="selectlanguage">Select language</string>
	<string name="language">Language</string>
	<string name="selectbattery">Select battery notification type</string>
	<string name="batteryicons">Battery Notification Type</string>
	<string name="weatherforecast">Weather Forecast</string>
	<string name="batteryinfo">Battery Information</string>
	<string name="restartservice">Restart Widgets</string>
	<string name="restartservicedesc">Restart Zoromatic Widgets service</string>
	<string name="airplanedesc">Airplane Mode</string>
	<string name="brightnessdesc">Brightness Settings</string>
	<string name="nfcdesc">NFC Status</string>
	<string name="syncdesc">Sync Status</string>
	<string name="orientationdesc">Rotation Status</string>
	<string name="torchdesc">Flashlight</string>
	<string name="autobrightness">Automatic Brightness</string>
	<string name="buttonsave">Save</string>
	<string name="buttoncancel">Cancel</string>
	<string name="clockfont">Clock Font</string>
    <string name="selectclockfont">Select clock font</string>
    <string name="boldtext">Bold Text</string>
    <string name="normaltext">Normal Text</string>
    <string name="datefont">Date Font</string>
    <string name="selectdatefont">Select date font</string>
    <string name="dateboldtext">Bold Text</string>
    <string name="datenormaltext">Normal Text</string>
    <string name="weatherfont">Weather Font</string>
    <string name="selectweatherfont">Select weather font</string>
    <string name="weatherboldtext">Bold Text</string>
    <string name="weathernormaltext">Normal Text</string>
    <string name="showweather">Show Weather Information</string>
	<string name="showweatherwidget">Show weather information on the widget</string>
	<string name="hideweatherwidget">Hide weather information on the widget</string>
	<string name="currentlocationdesc">Current location coordinates are obtained using network (Wi-Fi or cell) or GPS. Location name is obtained using weather provider API.</string>
	<string name="refresh">Refresh</string>
	<string name="settings">Settings</string>
	<string name="systeminfo">System Information</string>
	<string name="updatingweather">Updating weather.</string>
	<string name="locationnotfound">Location not found!</string>
	<string name="nolocationdefined">No location defined.</string>
	<string name="restartingservice">Restarting widgets service.</string>
	<string name="generalsettings">General Settings</string>
	<string name="lookandfeel">Look and Feel</string>
	<string name="selecttheme">Select application theme</string>
	<string name="apptheme">Main Theme</string>
	<string name="searching">Searching&#8230;</string>
	<string name="searchinglocations">Searching Locations</string>
	<string name="locationssettingsdisabled">Location providers are disabled. Would you like to open location settings to enable them?</string>
	<string name="findmap">Find on Map</string>
	<string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="selectforecasttheme">Select forecast theme</string>
    <string name="forecasttheme">Forecast Theme</string>
    <string name="category_general">general</string>
    <string name="category_weather">weather</string>
    <string name="category_look">look</string>
    <string name="widget_background">Widget Background Color</string>
    <string name="select_widget_background">Select widget background color</string>
    <string name="menu_add_location">Add location</string>
    <string name="menu_delete_location">Delete location</string>
    <string name="menu_update_location">Update location</string>
    <string name="menu_make_default">Make Default</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
   	<string name="showtoggle">Show Toggle Button</string>
   	<string name="select_color_on">Select color for status ON</string>
   	<string name="color_on">Color On</string>
   	<string name="select_color_off">Select color for status OFF</string>
   	<string name="color_off">Color Off</string>
   	<string name="select_color_transition">Select color for transition statuses</string>
   	<string name="color_transition">Transition Color</string>
   	<string name="select_color_background">Select background color</string>
   	<string name="color_background">Background Color</string>
   	<string name="select_color_text_on">Select text color for status ON</string>
   	<string name="color_text_on">Text Color On</string>
   	<string name="select_color_text_off">Select text color for status OFF</string>
   	<string name="color_text_off">Text Color Off</string>
   	<string name="select_battery_color_1">Select color for Battery Level 1</string>
   	<string name="color_battery_1">Color for Battery Level 1</string>
   	<string name="battery_threshold_2">Threshold for Battery Level 2</string>
   	<string name="select_battery_color_2">Select color for Battery Level 2</string>
   	<string name="color_battery_2">Color for Battery Level 2</string>
   	<string name="battery_threshold_3">Threshold for Battery Level 3</string>
   	<string name="select_battery_color_3">Select color for Battery Level 3</string>
   	<string name="color_battery_3">Color for Battery Level 3</string>
   	<string name="battery_threshold_4">Threshold for Battery Level 4</string>
   	<string name="select_battery_color_4">Select color for Battery Level 4</string>
   	<string name="color_battery_4">Color for Battery Level 4</string>
   	<string name="showsettings">Show Settings Button</string>
   	<string name="selectcolorscheme">Select application color scheme</string>
	<string name="appcolortheme">Main Color Scheme</string>
	<string name="togglewidgets">TOGGLE WIDGETS</string>
	<string name="batterywidget">BATTERY WIDGET</string>
	<string name="selectbrightnesstoggle">Select brightness options</string>
	<string name="brightnesstoggle">Brightness Options</string>
	<string name="widgets_settings">Home Screen Widgets</string>
	<string name="configurehomescreenwidgets">Configure home screen widgets</string>
	<string name="theme_colors">Theme and Colors</string>
	<string name="configurethemeandcolors">Configure theme and colors</string>
	<string name="category_theme">theme</string>
	<string name="category_notification">notification</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="gps">Location</string>
	<string name="mobile">Data</string>
	<string name="ringer">Sound</string>
	<string name="wifi">WiFi</string>
	<string name="airplane">Airplane</string>
	<string name="brightness">Brightness</string>
	<string name="nfc">NFC</string>
	<string name="sync">Sync</string>
	<string name="orientation">Rotation</string>
	<string name="torch">Flashlight</string>
</resources>