<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:title="@string/generalsettings"
        android:icon="@drawable/settings"
        android:fragment="com.zoromatic.widgets.DigitalClockAppWidgetPreferenceFragment" >
        <extra
            android:name="category"
            android:value="@string/category_general" />
    </header>
    <header
        android:title="@string/weathersettings"
        android:icon="@drawable/weather"
        android:fragment="com.zoromatic.widgets.DigitalClockAppWidgetPreferenceFragment" >
        <extra
            android:name="category"
            android:value="@string/category_weather" />
    </header>
    <header
        android:title="@string/lookandfeel"
        android:icon="@drawable/palette"
        android:fragment="com.zoromatic.widgets.DigitalClockAppWidgetPreferenceFragment" >
        <extra
            android:name="category"
            android:value="@string/category_look" />
    </header>
</preference-headers>